# job-opportunity-scanner

./: .contextignore  .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  config.example.yaml  config.yaml  pyproject.toml  verify_config.py
app/: __init__.py  main.py
app/adapters/: __init__.py  ashby.py  base.py  exceptions.py  factory.py  greenhouse.py  lever.py
app/config/: __init__.py  duration.py  environment.py  exceptions.py  loader.py  models.py  validators.py
app/domain/: __init__.py  models.py
app/logging/: __init__.py  config.py  context.py
app/matching/: __init__.py  engine.py  models.py  utils.py
app/normalization/: __init__.py  models.py  service.py
app/notifications/: __init__.py  models.py  payloads.py  service.py  smtp_client.py  templates.py
app/notifications/email_templates/: job_alert_body.html.j2  job_alert_body.txt.j2  job_alert_subject.j2
app/persistence/: __init__.py  database.py  exceptions.py  repositories.py  schema.py
app/pipeline/: __init__.py  models.py  runner.py
app/scheduler/: __init__.py  service.py
app/utils/: __init__.py  hashing.py  highlighting.py  timestamps.py
docs/: ats-adapters-techspec.md  dockerization-techspec.md  documentation-update-techspec.md  end-validation-techspec.md  job-opportunity-scanner-prd.md  job-opportunity-scanner-techspec.md  logging-&-observability-techspec.md  normalization-&-matching-techspec.md  notification-techspec.md  persistence-layer-techspec.md  requirements_v1.txt  sample_end_validation.yaml  scheduler-&-pipeline-techspec.md
scripts/: run_sample_scan.py
tests/: __init__.py  test_adapters.py  test_config.py  test_domain_models.py  test_hashing.py  test_highlighting.py  test_logging_config.py  test_logging_context.py  test_main.py  test_matching.py  test_normalization.py  test_notifications_payloads.py  test_notifications_service.py  test_notifications_smtp.py  test_notifications_templates.py  test_persistence.py  test_pipeline.py  test_scheduler.py  test_timestamps.py
tests/fixtures/: invalid_bad_ats_type.yaml  invalid_conflicting_terms.yaml  invalid_duplicate_sources.yaml  invalid_empty_search.yaml  invalid_missing_sources.yaml  invalid_scan_interval.yaml  iso8601_duration_config.yaml  minimal_config.yaml  valid_config.yaml
tests/fixtures/ats_responses/: ashby_sample_response.json  greenhouse_sample_response.json  lever_sample_response.json
tests/fixtures/end_validation/: sample_jobs.yaml
tests/helpers/: __init__.py  fixture_adapter.py
tests/integration/: test_end_validation.py  test_normalization_matching.py  test_notifications.py  test_persistence_integration.py  test_pipeline_notifications.py
