[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "job-opportunity-scanner"
version = "1.0.0"
description = "Automated service that monitors ATS APIs for job postings, evaluates against keyword rules, and sends email notifications"
readme = "README.md"
requires-python = ">=3.13"
license = {text = "MIT"}
authors = [
    {name = "Job Opportunity Scanner Contributors"}
]
keywords = [
    "job-monitoring",
    "ats-integration",
    "job-alerts",
    "automation"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: 3.15",
    "Topic :: Office/Business",
    "Topic :: Utilities",
]

dependencies = [
    "requests>=2.31.0",
    "PyYAML>=6.0",
    "types-PyYAML>=6.0",
    "APScheduler>=3.10.0",
    "SQLAlchemy>=2.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "email-validator>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.11.0",
    "black>=23.0.0",
    "ruff>=0.0.280",
    "mypy>=1.5.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/job-opportunity-scanner"
Documentation = "https://github.com/yourusername/job-opportunity-scanner#readme"
Repository = "https://github.com/yourusername/job-opportunity-scanner.git"
Issues = "https://github.com/yourusername/job-opportunity-scanner/issues"

[project.scripts]
job-scanner = "app.main:main"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.hatch.build.targets.sdist]
include = [
    "/app",
    "/tests",
    "/docs",
    "/README.md",
    "/LICENSE",
    "/*.md",
]
exclude = [
    "/**/*.pyc",
    "/**/__pycache__",
    "/.git",
    "/.gitignore",
    "/*.db",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=app --cov-report=html --cov-report=term-missing"
python_files = ["test_*.py", "*_test.py"]

[tool.coverage.run]
source = ["app"]
omit = [
    "*/tests/*",
    "*/__main__.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

[tool.black]
line-length = 100
target-version = ["py313"]
include = '\.pyi?$'

[tool.ruff]
line-length = 100
target-version = "py313"
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "N",      # pep8-naming
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "A",      # flake8-builtins
    "C4",     # flake8-comprehensions
    "DTZ",    # flake8-datetimez
    "T10",    # flake8-debugger
    "EM",     # flake8-errmsg
    "ISC",    # flake8-implicit-str-concat
    "G",      # flake8-logging-format
    "PIE",    # flake8-pie
    "PT",     # flake8-pytest-style
    "RET",    # flake8-return
    "SIM",    # flake8-simplify
    "TID",    # flake8-tidy-imports
]
ignore = [
    "E501",   # Line too long (black handles this)
    "A003",   # Class attribute shadowing built-in
]

[tool.ruff.isort]
known-first-party = ["app"]

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_optional = true

[[tool.mypy.overrides]]
module = "tests.*"
ignore_errors = true
